[gd_scene load_steps=14 format=2]

[ext_resource path="res://Escenas/Pegaso.tscn" type="PackedScene" id=1]
[ext_resource path="res://Escenas/Nivel 3/Nivel2A3.gd" type="Script" id=2]
[ext_resource path="res://Fondos/FondosPegaso1/FondoPegaso1.png" type="Texture" id=3]
[ext_resource path="res://Sonidos/Ambiente/VientoDerecha.wav" type="AudioStream" id=4]
[ext_resource path="res://UI/Menus/PauseMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/Menus/MobileControls.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 200 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 350 )

[sub_resource type="Animation" id=3]
resource_name = "Entrada"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Pegaso:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -200, 200 ), Vector2( 64, 200 ) ]
}
tracks/1/type = "animation"
tracks/1/path = NodePath("Pegaso/AnimacionPegaso")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": PoolStringArray( "CorreConJugadorPegaso" ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/ColorRect:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Pegaso/CanvasLayer/Hearts:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=4]
resource_name = "EntradaANivel3"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pegaso/CanvasLayer/Hearts:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "animation"
tracks/2/path = NodePath("Pegaso/AnimacionPegaso")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": PoolStringArray( "CorreConJugadorPegaso" ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "teletransporteANivel3"
} ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 10, 200 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 346, 10 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 10, 200 )

[node name="Nivel2A3" type="Node2D"]
script = ExtResource( 2 )

[node name="Limites" type="YSort" parent="."]

[node name="LimiteIzq" type="StaticBody2D" parent="Limites"]
position = Vector2( 0, 200 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Limites/LimiteIzq"]
shape = SubResource( 1 )

[node name="LimiteDer" type="StaticBody2D" parent="Limites"]
position = Vector2( 688, 200 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Limites/LimiteDer"]
shape = SubResource( 1 )

[node name="LimiteArriba" type="StaticBody2D" parent="Limites"]
position = Vector2( 342.5, 16 )
rotation = 1.5708
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Limites/LimiteArriba"]
shape = SubResource( 2 )

[node name="LimiteAbajo" type="StaticBody2D" parent="Limites"]
position = Vector2( 342.5, 390 )
rotation = 1.5708
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Limites/LimiteAbajo"]
shape = SubResource( 2 )

[node name="Pegaso" parent="." instance=ExtResource( 1 )]
position = Vector2( -200, 200 )
collision_layer = 2
pegasoMovible = true

[node name="Sprite" parent="Pegaso" index="0"]
flip_h = true
frame = 24

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
zoom = Vector2( 2, 2 )

[node name="Animatione" type="AnimationPlayer" parent="."]
autoplay = "Entrada"
anims/Entrada = SubResource( 3 )
anims/EntradaANivel3 = SubResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
margin_right = 344.0
margin_bottom = 208.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 1 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 3 )
centered = false

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="PauseMenu" parent="CanvasLayer2" instance=ExtResource( 5 )]
visible = false

[node name="SpawnsArriba" type="YSort" parent="."]

[node name="Spawn11" type="Position2D" parent="SpawnsArriba"]
position = Vector2( 80, -256 )

[node name="Spawn12" type="Position2D" parent="SpawnsArriba"]
position = Vector2( 160, -256 )

[node name="Spawn13" type="Position2D" parent="SpawnsArriba"]
position = Vector2( 240, -256 )

[node name="Spawn14" type="Position2D" parent="SpawnsArriba"]
position = Vector2( 320, -256 )

[node name="Spawn15" type="Position2D" parent="SpawnsArriba"]
position = Vector2( 400, -256 )

[node name="Spawn16" type="Position2D" parent="SpawnsArriba"]
position = Vector2( 480, -256 )

[node name="Spawn17" type="Position2D" parent="SpawnsArriba"]
position = Vector2( 560, -256 )

[node name="Spawn18" type="Position2D" parent="SpawnsArriba"]
position = Vector2( 640, -256 )

[node name="SpawnsDerecha" type="YSort" parent="."]

[node name="Spawn1" type="Position2D" parent="SpawnsDerecha"]
position = Vector2( 1024, 80 )

[node name="Spawn2" type="Position2D" parent="SpawnsDerecha"]
position = Vector2( 1024, 160 )

[node name="Spawn3" type="Position2D" parent="SpawnsDerecha"]
position = Vector2( 1024, 240 )

[node name="Spawn4" type="Position2D" parent="SpawnsDerecha"]
position = Vector2( 1024, 320 )

[node name="Spawn5" type="Position2D" parent="SpawnsDerecha"]
position = Vector2( 1024, 384 )

[node name="Spawn6" type="Position2D" parent="SpawnsDerecha"]
position = Vector2( 1024, 30 )

[node name="SpawnsIzquierda" type="YSort" parent="."]

[node name="SpawnL1" type="Position2D" parent="SpawnsIzquierda"]
position = Vector2( -339, 120 )

[node name="SpawnL2" type="Position2D" parent="SpawnsIzquierda"]
position = Vector2( -339, 200 )

[node name="SpawnL3" type="Position2D" parent="SpawnsIzquierda"]
position = Vector2( -339, 280 )

[node name="SpawnL4" type="Position2D" parent="SpawnsIzquierda"]
position = Vector2( -339, 360 )

[node name="SpawnL5" type="Position2D" parent="SpawnsIzquierda"]
position = Vector2( -339, 30 )

[node name="TimerSpawnLado" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="TimerSpawnLado2" type="Timer" parent="."]
one_shot = true

[node name="TimerSecciones" type="Timer" parent="."]
wait_time = 29.0
autostart = true

[node name="TimerSpawnArriba" type="Timer" parent="."]
wait_time = 2.0

[node name="TimerSpawnArriba2" type="Timer" parent="."]
one_shot = true

[node name="TimerSpawnIzquierdo" type="Timer" parent="."]
wait_time = 2.0

[node name="TimerSpawnIzquierdo2" type="Timer" parent="."]
one_shot = true

[node name="PajarosDesaparecen" type="YSort" parent="."]

[node name="PajarosDesaparecenDerecha" type="Area2D" parent="PajarosDesaparecen"]
position = Vector2( -400, 200 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PajarosDesaparecen/PajarosDesaparecenDerecha"]
shape = SubResource( 5 )

[node name="PajarosDesaparecenArriba" type="Area2D" parent="PajarosDesaparecen"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PajarosDesaparecen/PajarosDesaparecenArriba"]
position = Vector2( 343, 800 )
shape = SubResource( 6 )

[node name="PajarosDesaparecenIzquierda" type="Area2D" parent="PajarosDesaparecen"]
position = Vector2( 1152, 200 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PajarosDesaparecen/PajarosDesaparecenIzquierda"]
shape = SubResource( 7 )

[node name="Viento" type="YSort" parent="."]

[node name="VientoIzquierda" type="Node2D" parent="Viento"]
position = Vector2( 340, 224 )

[node name="AudioIzquierda" type="AudioStreamPlayer2D" parent="Viento/VientoIzquierda"]
volume_db = 5.0
max_distance = 1000.0
bus = "Sonido"

[node name="Audio2" type="AudioStreamPlayer2D" parent="Viento/VientoIzquierda"]
stream = ExtResource( 4 )
volume_db = 5.0
max_distance = 1000.0
bus = "Sonido"

[node name="MobileControls" parent="." instance=ExtResource( 6 )]
[connection signal="dead" from="Pegaso" to="." method="_on_Pegaso_dead"]
[connection signal="muriendo" from="Pegaso" to="." method="_on_Pegaso_muriendo"]
[connection signal="animation_finished" from="Animatione" to="." method="_on_Animatione_animation_finished"]
[connection signal="reinicio" from="CanvasLayer2/PauseMenu" to="." method="_on_PauseMenu_reinicio"]
[connection signal="timeout" from="TimerSpawnLado" to="." method="_on_TimerSpawnLado_timeout"]
[connection signal="timeout" from="TimerSpawnLado2" to="." method="_on_TimerSpawnLado2_timeout"]
[connection signal="timeout" from="TimerSecciones" to="." method="_on_TimerSecciones_timeout"]
[connection signal="timeout" from="TimerSpawnArriba" to="." method="_on_TimerSpawnArriba_timeout"]
[connection signal="timeout" from="TimerSpawnArriba2" to="." method="_on_TimerSpawnArriba2_timeout"]
[connection signal="timeout" from="TimerSpawnIzquierdo" to="." method="_on_TimerSpawnIzquierdo_timeout"]
[connection signal="timeout" from="TimerSpawnIzquierdo2" to="." method="_on_TimerSpawnIzquierdo2_timeout"]
[connection signal="area_entered" from="PajarosDesaparecen/PajarosDesaparecenDerecha" to="." method="_on_PajarosDesaparecenDerecha_area_entered"]
[connection signal="area_entered" from="PajarosDesaparecen/PajarosDesaparecenArriba" to="." method="_on_PajarosDesaparecenArriba_area_entered"]
[connection signal="area_entered" from="PajarosDesaparecen/PajarosDesaparecenIzquierda" to="." method="_on_PajarosDesaparecenIzquierda_area_entered"]

[editable path="Pegaso"]

[editable path="Pegaso/Hurtbox"]

[editable path="MobileControls"]
